syntax = "proto3";

package placementgroup;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/placementgroup/protos";

////////////////////////////////////////////////////////////////////////////////

message CreatePlacementGroupRequest {
    reserved 4;

    string ZoneId = 1;
    string GroupId = 2;
    types.PlacementStrategy PlacementStrategy = 3;
    uint32 PlacementPartitionCount = 5;
}

message CreatePlacementGroupTaskState {
    reserved 1;
}

